# TokenCircut

./: .coverage  .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REAL_WORLD_TEST_REPORT.md  SECURITY.md  loop_demo.py  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  keep-alive.yml  publish.yml
.opencode/plugins/: ponytail.mjs
control-plane/: .env.example  middleware.ts  package.json  tailwind.config.js
control-plane/app/: globals.css  layout.tsx
control-plane/app/config/: page.tsx
control-plane/app/dashboard/: page.tsx
control-plane/app/login/: page.tsx
control-plane/lib/: types.ts
control-plane/lib/supabase/: browser.ts
deep-dive/: langgraph-interceptor.md
docs/: detection-pipeline.md  hashing-telemetry.md  python-project-patterns-research.md
docs/architecture/: v7_interface_contracts.py
docs/assets/: demo.cast
examples/: README.md  langgraph_basic.py  openai_wrapper.py
projects/audit-reporter/: main.py
projects/loop-detector/: main.py
projects/multi-agent-stagnation/: main.py
projects/semantic-lint/: main.py
projects/threshold-tuner/: main.py
projects/transcript-doctor/: main.py
simulation/: demo.tape  loop_demo.py
src/praisonai_plugins/guardrails/: semantic_loop_guardrail.py
src/tokencircuit/: __init__.py  __main__.py  budget.py  canonicalizer.py  config.py  engine.py  exceptions.py  instrumentation.py  ledger.py  ring_buffer.py  semantic_detector.py  state_schema.py  telemetry.py  types.py  validator.py
src/tokencircuit/adapters/: __init__.py  crewai.py  langgraph.py  openai.py  wrapper.py
src/tokencircuit/clients/: __init__.py  openai.py
src/tokencircuit/detectors/: __init__.py  composite.py  futile_action.py  pipeline.py  state_stagnation.py
src/tokencircuit/interceptors/: __init__.py  crewai.py  langgraph.py
src/tokencircuit/otel/: __init__.py  hash_utils.py
supabase/functions/ingest/: index.ts
supabase/functions/telemetry-ingest/: index.ts
supabase/migrations/: 00001_initial_schema.sql
tests/: conftest.py  stress_test_real_world.py  test_composite.py  test_edge_cases.py  test_hash_utils.py  test_init.py  test_pipeline.py  test_ring_buffer.py  test_state_stagnation.py
tests/integration/: test_api_validation_safety.py  test_audit_mode.py  test_crewai.py  test_crewai_adapter.py  test_crewai_integration.py  test_langgraph.py  test_langgraph_integration.py  test_loop_simulation.py  test_openai_client.py  test_performance.py  test_runaway_generation.py  test_semantic_detector.py  test_state_isolation.py  test_telemetry.py
tests/performance/: stress_test_real_world.py  test_benchmarks.py  test_performance.py
tests/security/: test_edge_function.py  test_security.py
tests/unit/: test_canonicalizer.py  test_config.py  test_crewai_adapter.py  test_detectors.py  test_edge_cases.py  test_engine_decide.py  test_futile_action.py  test_init.py  test_ledger.py  test_openai_client.py  test_pipeline.py  test_shingles.py  test_state_reducer.py  test_telemetry.py  test_transcript_surgery.py  test_validator.py
