[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tokencircuit"
version = "0.1.0"
description = "Detect infinite loops in LLM agentic workflows and interrupt them"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["llm", "agent", "langgraph", "crewai", "guardrails"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/Devaretanmay/TokenCircut"
Repository = "https://github.com/Devaretanmay/TokenCircut"

[project.optional-dependencies]
langgraph = ["langgraph>=0.2"]
crewai = ["crewai>=0.30"]
openai = ["openai>=1.0"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "pyright>=1.1",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tokencircuit = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
