[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tokencircuit"
version = "8.0.0"
description = "Detect infinite loops in LLM agentic workflows and interrupt them"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["llm", "agent", "langgraph", "crewai", "guardrails"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/Devaretanmay/TokenCircut"
Repository = "https://github.com/Devaretanmay/TokenCircut"

[project.optional-dependencies]
langgraph = ["langgraph>=1.0.8"]
crewai = ["crewai>=0.30"]
# [cli] is intentionally separate so core users don't pull in Textual.
# Install with: pip install tokencircuit[cli]
cli = ["textual>=0.47"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "mypy>=1.10",
    "pyright>=1.1",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tokencircuit = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
